--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.12.3
 blinker==1.8.2
 certifi==2024.6.2
 charset-normalizer==3.3.2
@@ -8,7 +9,9 @@ flyflowclient==1.14.16
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
+lxml==5.2.2
 MarkupSafe==2.1.5
 requests==2.32.3
+soupsieve==2.5
 urllib3==2.2.1
 Werkzeug==3.0.3
